# wtf-am-i-doing

./: .gitignore  README.md  app_launcher.py  build.sh  launch.command  pyproject.toml  release.sh  setup.py  test_predict.sh
src/wtf_am_i_doing/: __init__.py  capture.py  config.py  diary.py  inference.py  inference_claude.py  inference_fastvlm.py  inference_mlx.py  main.py
