[project]
name = "wtf-am-i-doing"
version = "0.1.0"
description = "Weighted Temporal Forecaster - A continuous screen activity diary using FastVLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
wtf-am-i-doing = "wtf_am_i_doing.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtf_am_i_doing"]
